Add Google repo to root build.gradle
Added `google()` repository to buildscript and root build.gradle.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,7 @@ description = 'react-native-pdf'
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
 
@@ -24,6 +25,7 @@ android {
 }
 
 repositories {
+    google()
     jcenter()
 }
 
