--- a/example/package.json
+++ b/example/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
-    "rn-fetch-blob": "shoutem/rn-fetch-blob#cc479b50bf17e75e4080b344d7dd04fbdbfc1c65",
+    "react-native-fetch-blob": "shoutem/react-native-fetch-blob#cc479b50bf17e75e4080b344d7dd04fbdbfc1c65",
     "react-native-pdf": "github:wonday/react-native-pdf#master"
   },
   "devDependencies": {
